Custom code with few bugs

--- a/src/App.css
+++ b/src/App.css
@@ -48,18 +48,24 @@
   border-radius: 2px;
 }
 
-#sign{
-  width: 160px;
-  height: 40px;
-  background-color: #fff;
-}
-
 .credential
 {
   display: flex;
-  /* justify-content: center; */
+  width: 160px;
+  height: 27px;
+  /* background-color: gray; */
+  padding: 5px;
+  margin: 2px;
+  border-radius: 3px;
+  
+}
+
+.credential:hover{
+  background-color: rgb(234, 234, 234);
+  cursor: pointer;
 }
 
 .credential .icon {
   margin-right: 10px;
+  margin-left: 10px;
 }
