--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,13 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 .App{
   background: rgb(92, 92, 92);
-  width: 800px;
-  height: 600px;
+  min-width: 800px;
+  min-height: 600px;
   display: flex;
   padding: 20px;
 }
