Drag and drop PDF working

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: inherit;
+  width: -webkit-fill-available;
   background-color: rgb(157, 157, 157);
   /* border-radius: 5px; */
 }
