--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .App{
-  background: rgb(92, 92, 92);
+  background: rgb(157,157,157);
   min-width: 800px;
   min-height: 600px;
   display: flex;
@@ -18,6 +18,7 @@
   /* border-radius: 5px; */
   display: flex;
   justify-content: center;
+  max-height: 90vh;
 }
 
 .droppables ul{
@@ -37,6 +38,8 @@
   align-items: center;
   width: -webkit-fill-available;
   background-color: rgb(157, 157, 157);
+  max-height: 100vh;
+  overflow: scroll;
   /* border-radius: 5px; */
 }
 
@@ -45,8 +48,9 @@
   height: 480px;
   background: #fff;
   border-radius: 2px;
-  position: relative;
-  overflow: hidden;
+  /* position: absolute; */
+  scale: 0.2;
+  margin-top: 50px;
 }
 
 .credential
