--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #242424;
+  background-color: rgb(157,157,157);
 }
 
 h1 {
