--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@
   display: flex;
   justify-content: center;
   max-height: 90vh;
+  height: fit-content;
 }
 
 .droppables ul{
@@ -50,7 +51,6 @@
   border-radius: 2px;
   /* position: absolute; */
   scale: 0.2;
-  margin-top: 50px;
 }
 
 .credential
